k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      $REQUIRE_NONCRITICAL_EXCEPT_PRODUCTION
      $TOLERATE_NONCRITICAL_EXCEPT_PRODUCTION

      containers:
      - name: user-service
        image: eu.gcr.io/boclips-prod/boclips/user-service:${VERSION}
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: "1000m"
            memory: "500Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
